--- a/goldswol/index.html
+++ b/goldswol/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>AJAX Interactions</title>
-    <link ref="stylesheet" href="stylesheet.css" type="text/css">
+    <link rel="stylesheet" href="style.css" type="text/css">
   </head>
   <body id="body">
     <h3>Welcome to the weather store</h3>
